--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="card_content">
                         <span class="card_title">Computer art</span>
                         <span class="course">COURSE</span>
-                        <span class="card_description">Web development, Mobile development,iOT, APIs</span>
+                        <span class="card_description">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation </span>
                     </div>
                 </div>
                 <div class="card">
@@ -108,7 +108,7 @@
                     <div class="card_content">
                         <span class="card_title">Design</span>
                         <span class="course">COURSE</span>
-                        <span class="card_description">Web development, Mobile development,iOT, APIs</span>
+                        <span class="card_description">User Experience Design, User Research, Visual Design</span>
                     </div>
                 </div>
                 <div class="card">
@@ -116,7 +116,7 @@
                     <div class="card_content">
                         <span class="card_title">Data</span>
                         <span class="course">COURSE</span>
-                        <span class="card_description">Web development, Mobile development,iOT, APIs</span>
+                        <span class="card_description">Data Science, Big Data, SQL, Data Visualisation</span>
                     </div>
                 </div>
                 <div class="card">
@@ -124,7 +124,7 @@
                     <div class="card_content">
                         <span class="card_title">Business</span>
                         <span class="course">COURSE</span>
-                        <span class="card_description">Web development, Mobile development,iOT, APIs</span>
+                        <span class="card_description">Product Development, Business Development, Startup</span>
                     </div>
                 </div>
                 <div class="card">
@@ -132,7 +132,7 @@
                     <div class="card_content">
                         <span class="card_title">Marketing</span>
                         <span class="course">COURSE</span>
-                        <span class="card_description">Web development, Mobile development,iOT, APIs</span>
+                        <span class="card_description">Analytics, Content Marketing, Mobile Marketing</span>
                     </div>
                 </div>
             </div>
